<resources>
    <string name="app_name">Craft Master</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Выйти из аккаунта</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_add_task">Создать задание</string>
    <string name="menu_find_task">Найти задания</string>
    <string name="menu_my_tasks">Мои задания</string>
    <string name="menu_add_offer">Мой профиль</string>
    <string name="menu_find_offer">Найти исполнителя</string>
    <string name="menu_notification">Уведомления</string>
    <string name="login_hint">Логин</string>
    <string name="pass_hint">Пароль</string>
    <string name="login_btn">Войти</string>
    <string name="registr_btn">Зарегистрироваться</string>
    <string name="empty_login_pass">Введите логин и пароль</string>
    <string name="reg_login_hint">Логин</string>
    <string name="reg_pass_hint">Пароль</string>
    <string name="reg_fio_hint">Имя</string>
    <string name="reg_phone_hint">Номер телефона</string>
    <string name="reg_email_hint">Адрес электронной почты</string>
    <string name="reg_btn_text">Зарегистрироваться</string>
    <string name="reg_success">Регистрация прошла успешно</string>
    <string name="reg_login_exists">Пользователь с таким логином уже существует</string>
    <string name="reg_not_success">Регистрация не завершена. Попробуйте позднее.</string>
    <string name="toast_log_out">Выполняется выход</string>
    <string name="toast_incorrect_login_password">Некорректные логин и пароль</string>
    <string name="select_category_btn">Выбрать категорию</string>
    <string name="title_categories">Выбрать категорию</string>
    <string name="title_add_task_info">Задание</string>
    <string name="add_task_btn">Создать задание</string>
    <string name="add_task_name_hint">Название задания</string>
    <string name="add_task_description_hint">Опишите, что нужно сделать</string>
    <string name="toast_add_task_name">Укажите название задания</string>
    <string name="toast_add_task_ok">Задание создано</string>
    <string name="dialog_add_task_title">Создать задание</string>
    <string name="dialog_add_task_msg">Задание успешно создано</string>
    <string name="dialog_add_task_ok">OK</string>
    <string name="text_view_add_offer_label_text">Выбранные категории</string>
    <string name="btn_add_offer_select_category">Выбрать категории</string>
    <string name="btn_add_profile">Добавить</string>
    <string name="btn_add_offer_ok">Сохранить</string>
    <string name="btn_add_offer_cancel">Отмена</string>
    <string name="add_offer_label_text">Выполняемые работы:</string>
    <string name="profile_item_cat_label">Категория:</string>
    <string name="profile_item_work_exp">Опыт работы:</string>
    <string name="profile_item_descr">Описание:</string>
    <string name="add_profile_title">Добавить профиль</string>
    <string name="add_profile_cat_label">Категория</string>
    <string name="add_profile_work_exp_label">Опыт работы</string>
    <string name="add_profile_desc_label">Описание</string>
    <string name="add_profile_btn">Сохранить</string>
    <string name="select_categories_title_all_cat">Все категории</string>
    <string name="add_profile_toast_input_cat">Выберите категорию</string>
    <string name="add_profile_toast_input_work_exp">Укажите опыт</string>
    <string name="delete_profile_title">Удалить</string>
    <string name="dialog_profiles_changes">Изменения сохранены</string>
    <string name="dialog_profiles_changes_error">Ошибка. Попробуйте позднее.</string>
    <string name="dialog_ok">OK</string>
    <string name="text_view_my_task_cat_label">Категория:</string>
    <string name="text_view_my_task_status_label">Статус:</string>
    <string name="btn_close_task_text">Закрыть</string>
    <string name="btn_done_task_text">Выполнить</string>
    <string name="toast_server_error">Не удалось обновить</string>
    <string name="select_date_title">Выберите дату</string>
    <string name="label_nav_add_response">Добавить отклик</string>
    <string name="toast_add_response_data">Заполните поля</string>
    <string name="dialog_add_response_msg">Ваш отклик отправлен</string>
</resources>