<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_task"
            android:title="@string/menu_add_task" />
        <item
            android:id="@+id/nav_find_task"
            android:title="@string/menu_find_task" />
        <item
            android:id="@+id/nav_my_tasks"
            android:title="@string/menu_my_tasks" />
        <item
            android:id="@+id/nav_add_offer"
            android:title="@string/menu_add_offer" />
        <item
            android:id="@+id/nav_find_offer"
            android:title="@string/menu_find_offer" />
        <item
            android:id="@+id/nav_notification"
            android:title="@string/menu_notification" />
    </group>
</menu>