<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSelProfileCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_item_cat_label"
                android:textColor="@color/primaryDarkColor" />

            <TextView
                android:id="@+id/textViewSelProfileCatValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSelProfileWorkExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_item_work_exp"
                android:textColor="@color/primaryDarkColor" />

            <TextView
                android:id="@+id/textViewSelProfileWorkExpValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewSelProfileDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_item_descr"
            android:textColor="@color/primaryDarkColor" />

        <TextView
            android:id="@+id/textViewSelProfileDescrValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.cardview.widget.CardView>