<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.addOffer.AddOfferFragment">

    <TextView
        android:id="@+id/textViewAddOfferLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:text="@string/add_offer_label_text"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/addOfferBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/buttonAddProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/btn_add_profile"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonAddOffer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="10dp"
                android:text="@string/btn_add_offer_ok"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineAddOffetBottom"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineAddOffetBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <Button
                android:id="@+id/buttonAddOfferCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="12dp"
                android:text="@string/btn_add_offer_cancel"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonAddOffer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewAddOfferProfilesSelected"
        style="@android:style/Widget.Material.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/addOfferBottom"
        android:layout_below="@id/textViewAddOfferLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSelectedProfiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarAddOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>